[package]
name = "rqlite"
version = "0.0.1"
edition = "2024"
authors = ["Aleksandr Provotorov <provotorov@inbox.ru>"]
description = "Lightweight high-performance pure-rust transactional embedded database."
repository = "https://github.com/LigeronAhill/rqlite"
license = "MIT"
keywords = ["sql", "database", "embedded", "sqlite"]
categories = ["database"]
readme = "README.md"

[profile.release]
debug = true
opt-level = 3
overflow-checks = true
panic = "abort"

[profile.test]
debug = true
overflow-checks = true
panic = "abort"

[dependencies]

[package.metadata.tarpaulin]
exclude = ["tests/*"]
